# camera_renderer

./: CMakeLists.txt  README.md  loadConfig.xml
include/: camera_plain.h  camera_renderer.h  image_renderer.h
src/: camera_plain.cpp  camera_renderer.cpp  image_renderer.cpp  interface.cpp
